rename methods following python convention

--- a/haproxy_template.conf
+++ b/haproxy_template.conf
@@ -4,12 +4,12 @@ global
  ulimit-n 655360
  pidfile /var/run/haproxy.pid
 
-listen stats :81
-    mode http
-    stats enable
-    stats hide-version
-    stats realm Haproxy\ Statistics
-    stats uri /
+#listen stats :81
+#    mode http
+#    stats enable
+#    stats hide-version
+#    stats realm Haproxy\ Statistics
+#    stats uri /
 
 defaults
  mode http
