--- a/scripts/servo-sudoers.conf
+++ b/scripts/servo-sudoers.conf
@@ -18,5 +18,5 @@
 # additional information or have any questions.
 
 servo ALL = (ALL) ALL
-servo ALL = (root) NOPASSWD: /usr/sbin/haproxy,/bin/kill
+servo ALL = (root) NOPASSWD: /usr/sbin/haproxy,/bin/kill,/sbin/modprobe,/bin/mount
 
