EUCA-8676 servo should mount floppy with specific permissions

--- a/scripts/haproxy_template.conf
+++ b/scripts/haproxy_template.conf
@@ -4,6 +4,10 @@ global
  ulimit-n 655360
  pidfile /var/run/haproxy.pid
 
+#drop privileges after port binding
+ user nobody
+ group nogroup
+
 defaults
  contimeout      1000
  clitimeout      10000
