EUCA-8676 servo should mount floppy with specific permissions

--- a/scripts/haproxy_template.conf
+++ b/scripts/haproxy_template.conf
@@ -5,8 +5,8 @@ global
  pidfile /var/run/haproxy.pid
 
 #drop privileges after port binding
- user nobody
- group nogroup
+ user servo
+ group servo
 
 defaults
  contimeout      1000
