Updated haproxy_template.conf to contain non-deprecated configuration options

--- a/scripts/haproxy_template.conf
+++ b/scripts/haproxy_template.conf
@@ -9,7 +9,7 @@ global
  group servo
 
 defaults
- contimeout      1000
- clitimeout      10000
- srvtimeout      10000
+ timeout connect     5s
+ timeout client      2m
+ timeout server      2m
  option http-server-close # affects KA on/off
