EUCA-6205: 503 respond should have no body contents (following AWS ELB)

--- a/scripts/haproxy_template.conf
+++ b/scripts/haproxy_template.conf
@@ -12,3 +12,5 @@ defaults
  timeout connect     5s
  timeout client      1m
  timeout server      1m
+ errorfile 503 /etc/load-balancer-servo/503.http
+ 
